# mys-faucet

./: Cargo.toml  Dockerfile  Procfile  RAILWAY_DEPLOYMENT.md  RAILWAY_MIGRATION_GUIDE.md  README.md  nixpacks.toml  railway.json  railway.toml  setup-wallet.sh
src/: main.rs  metrics.rs  requests.rs  server.rs
src/faucet/: mod.rs  simple_faucet.rs  write_ahead_log.rs
