[package]
name = "mys-faucet"
version = "0.0.1"
edition = "2021"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.61"
axum = { version = "0.7", default-features = false, features = [
    "macros",
    "tokio",
    "http1",
    "http2",
    "json",
    "matched-path",
    "original-uri",
    "form",
    "query",
    "ws",
] }
bin-version = { path = "../bin-version" }
clap = { version = "4.4", features = ["derive", "wrap_help"] }
dashmap = "5.5.3"
thiserror = "1.0.40"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.37"
serde = { version = "1.0.144", features = ["derive", "rc"] }
tower = { version = "0.4.12", features = [
    "full",
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
tower-http = { version = "0.5", features = [
    "cors",
    "full",
    "trace",
    "set-header",
    "propagate-header",
] }
http = "1"
futures = "0.3.28"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
prometheus = "0.13.3"
scopeguard = "1.1"
tap = "1.0.1"
ttl_cache = "0.5.1"
eyre = "0.6.8"
tempfile = "3.3.0"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
tonic = { version = "0.12", features = ["zstd", "transport", "tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
once_cell = "1.18.0"
tower_governor = "0.4.3"

mys-json-rpc-types = { path = "../mys-json-rpc-types" }
mys-types = { path = "../mys-types" }
mys-config = { path = "../mys-config" }
mys-keys = { path = "../mys-keys" }
mys-sdk = { path = "../mys-sdk" }
mysten-metrics = { path = "../mysten-metrics" }
telemetry-subscribers = { path = "../telemetry-subscribers" }
typed-store = { path = "../typed-store" }
shared-crypto = { path = "../shared-crypto" }
async-recursion = "1.0.4"
mysten-network = { path = "../mysten-network" }

[dev-dependencies]
test-cluster = { path = "../test-cluster" }
wiremock = "0.5"
serde_json = { version = "1.0.95", features = ["preserve_order"] }

[[bin]]
name = "mys-faucet"
path = "src/main.rs"
